--- a/index.html
+++ b/index.html
@@ -644,7 +644,7 @@
                     </div>
                     <h3>Image Editor</h3>
                     <p>Crop, resize, rotate and apply filters</p>
-                    <a href="/image.editor.html" class="btn">Use Tool</a>
+                    <a href="#" class="btn">Use Tool</a>
                 </div>
                 
                 <div class="category-card">
